Fix and correct a bunch of idea warnings to make the code nicer to read