@@ -54,8 +54,8 @@ public class LocateCommand extends Command {
             Blocks.DARK_PRISMARINE
     );
 
-    private  final List<Block> strongholdBlocks = Arrays.asList(
-            Blocks.END_PORTAL_FRAME
+    private  final List<Block> strongholdBlocks = List.of(
+        Blocks.END_PORTAL_FRAME
     );
 
     public LocateCommand() {
@@ -237,14 +237,12 @@ public class LocateCommand extends Command {
 
     @EventHandler
     private void onReadPacket(PacketEvent.Receive event) {
-        if (event.packet instanceof EntitySpawnS2CPacket) {
-            EntitySpawnS2CPacket packet = (EntitySpawnS2CPacket) event.packet;
+        if (event.packet instanceof EntitySpawnS2CPacket packet) {
             if (packet.getEntityTypeId() == EntityType.EYE_OF_ENDER) {
                 firstPosition(packet.getX(),packet.getY(),packet.getZ());
             }
         }
-        if (event.packet instanceof PlaySoundS2CPacket) {
-            PlaySoundS2CPacket packet = (PlaySoundS2CPacket) event.packet;
+        if (event.packet instanceof PlaySoundS2CPacket packet) {
             if (packet.getSound() == SoundEvents.ENTITY_ENDER_EYE_DEATH) {
                 lastPosition(packet.getX(), packet.getY(), packet.getZ());
             }
